// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AnimatedNameButton Component > should match snapshot when collapsed 1`] = `
<div>
  <button
    class="inline-flex items-baseline transition-transform duration-300 ease-in-out hover:scale-105 active:scale-95 cursor-pointer "
    style="background: linear-gradient(to right, rgb(80, 150, 220), rgb(255, 200, 120)); -webkit-text-fill-color: transparent;"
    type="button"
  >
    <span>
      B
    </span>
    <span
      aria-hidden="true"
      class="overflow-hidden whitespace-nowrap max-w-0"
      style="transition: max-width 1600ms ease-in-out;"
    >
      arthmossr
    </span>
  </button>
</div>
`;

exports[`AnimatedNameButton Component > should match snapshot when expanded 1`] = `
<div>
  <button
    class="inline-flex items-baseline transition-transform duration-300 ease-in-out hover:scale-105 active:scale-95 cursor-default "
    disabled=""
    style="background: linear-gradient(to right, rgb(80, 150, 220), rgb(255, 200, 120)); -webkit-text-fill-color: transparent;"
    type="button"
  >
    <span>
      B
    </span>
    <span
      aria-hidden="false"
      class="overflow-hidden whitespace-nowrap max-w-[30ch]"
      style="transition: max-width 1600ms ease-in-out;"
    >
      arthmossr
    </span>
  </button>
</div>
`;
